Country - fix overflow

--- a/src/components/commons/Motivator/Motivator.module.scss
+++ b/src/components/commons/Motivator/Motivator.module.scss
@@ -7,7 +7,7 @@
 }
 .alatyr {
   position: absolute;
-  height: 28px;
+  height: 25px;
   fill: salmon;
   top: 8px;
   left: 8px;
